--- a/src/main/resources/org/example/javafx_hibernate/main-view.fxml
+++ b/src/main/resources/org/example/javafx_hibernate/main-view.fxml
@@ -31,11 +31,15 @@
       </TableView>
 
    </center>
-    <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
-        <items>
-            <Button text="Añadir copia" onAction="#onNuevaCopia"/>
-            <Button text="Editar copia" onAction="#onEditarCopia"/>
-            <Button text="Eliminar copia" onAction="#onEliminarCopia"/>
-        </items>
-    </ToolBar>
+    <bottom>
+        <ToolBar prefHeight="40.0" BorderPane.alignment="CENTER">
+            <items>
+                <Button text="Añadir copia" onAction="#onNuevaCopia"/>
+                <Button text="Editar copia" onAction="#onEditarCopia"/>
+                <Button text="Eliminar copia" onAction="#onEliminarCopia"/>
+            </items>
+        </ToolBar>
+
+    </bottom>
+
 </BorderPane>
