--- a/src/main/resources/org/example/javafx_hibernate/detalle-copia-view.fxml
+++ b/src/main/resources/org/example/javafx_hibernate/detalle-copia-view.fxml
@@ -3,19 +3,36 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.javafx_hibernate.ui.controller.DetalleCopiaController">
+            fx:controller="org.example.javafx_hibernate.ui.controller.DetalleCopiaController"
+            style="-fx-background-image: url('/images/fondos/2358.jpg');
+                   -fx-background-size: cover;
+                   -fx-background-position: center center;
+                   -fx-background-repeat: no-repeat;">
+
+    <left>
+        <VBox spacing="10.0"
+              alignment="CENTER"
+              style="-fx-background-color: rgba(255,255,255,0.9);
+                     -fx-padding: 20;
+                     -fx-background-radius: 5;">
+            <ImageView fx:id="ivImagen"
+                       fitWidth="180"
+                       preserveRatio="true"
+                       smooth="true"/>
+        </VBox>
+    </left>
 
     <top>
-        <HBox spacing="10">
-            <padding>
-                <Insets top="10" right="10" bottom="10" left="10"/>
-            </padding>
+        <HBox style="-fx-background-color: rgba(255,255,255,0.9);
+                     -fx-padding: 10;">
             <children>
                 <Label text="Detalle de la copia de película"
                        style="-fx-font-size: 16px; -fx-font-weight: bold;"/>
@@ -24,7 +41,10 @@
     </top>
 
     <center>
-        <GridPane hgap="10" vgap="8">
+        <GridPane hgap="10" vgap="8"
+                  style="-fx-background-color: rgba(255,255,255,0.9);
+                         -fx-background-radius: 8;
+                         -fx-padding: 15;">
             <padding>
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
@@ -50,15 +70,17 @@
 
                 <Label text="Soporte:" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
                 <Label fx:id="lblSoporte" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+
                 <Label text="Cantidad disponible:" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
                 <Label fx:id="lblCantidad" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
-
             </children>
         </GridPane>
     </center>
 
     <bottom>
-        <HBox spacing="10" alignment="CENTER_RIGHT">
+        <HBox spacing="10" alignment="CENTER_RIGHT"
+              style="-fx-background-color: rgba(255,255,255,0.9);
+                 -fx-padding: 10;">
             <padding>
                 <Insets top="10" right="10" bottom="10" left="10"/>
             </padding>
@@ -69,3 +91,4 @@
     </bottom>
 
 </BorderPane>
+
