--- a/src/main/resources/org/example/javafx_hibernate/login-view.fxml
+++ b/src/main/resources/org/example/javafx_hibernate/login-view.fxml
@@ -4,11 +4,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.javafx_hibernate.ui.controller.LoginController">
 
+<BorderPane xmlns:fx="http://javafx.com/fxml"
+            fx:controller="org.example.javafx_hibernate.ui.controller.LoginController"
+            style="-fx-background-image: url('/images/fondos/2358.jpg');
+            -fx-background-size: cover;
+            -fx-background-position: center center;
+            -fx-background-repeat: no-repeat;">
     <center>
-        <VBox spacing="10.0" alignment="CENTER">
+        <VBox spacing="10.0" alignment="CENTER"
+              style="-fx-background-color: rgba(255,255,255,0.9);
+            -fx-padding: 20;
+            -fx-background-radius: 5;">
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
