--- a/src/main/resources/org/example/javafx_hibernate/login-view.fxml
+++ b/src/main/resources/org/example/javafx_hibernate/login-view.fxml
@@ -7,6 +7,9 @@
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.example.javafx_hibernate.ui.controller.LoginController"
+            prefWidth="400" prefHeight="300"
+            minWidth="400" minHeight="300"
+            maxWidth="400" maxHeight="300"
             style="-fx-background-image: url('/images/fondos/2358.jpg');
             -fx-background-size: cover;
             -fx-background-position: center center;
