--- a/src/main/resources/org/example/javafx_hibernate/nueva-pelicula-view.fxml
+++ b/src/main/resources/org/example/javafx_hibernate/nueva-pelicula-view.fxml
@@ -37,7 +37,13 @@
                 <TextField fx:id="txtGenero" promptText="Ej: Drama" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
                 <Label text="Descripción:" GridPane.rowIndex="4" GridPane.columnIndex="0" GridPane.valignment="TOP"/>
-                <TextArea fx:id="txtDescripcion" prefRowCount="3" wrapText="true" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <TextArea fx:id="txtDescripcion"
+                          prefRowCount="3"
+                          wrapText="true"
+                          promptText="Ej: Un exboxeador se ve envuelto en el mundo del crimen..."
+                          GridPane.rowIndex="4"
+                          GridPane.columnIndex="1"/>
+
                 <Label text="Imagen (archivo):" GridPane.rowIndex="5" GridPane.columnIndex="0"/>
                 <TextField fx:id="txtImagen" GridPane.rowIndex="5" GridPane.columnIndex="1"
                            promptText="matrix.jpg"/>
