--- a/src/main/resources/org/example/javafx_objectDB/login-view.fxml
+++ b/src/main/resources/org/example/javafx_objectDB/login-view.fxml
@@ -6,7 +6,7 @@
 
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.javafx_hibernate.ui.controller.LoginController"
+            fx:controller="org.example.javafx_objectDB.ui.controller.LoginController"
             prefWidth="400" prefHeight="300"
             minWidth="400" minHeight="300"
             maxWidth="400" maxHeight="300"
