--- a/src/main/resources/org/example/javafx_objectDB/admin-view.fxml
+++ b/src/main/resources/org/example/javafx_objectDB/admin-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.javafx_hibernate.ui.controller.AdminController">
+            fx:controller="org.example.javafx_objectDB.ui.controller.AdminController">
 
     <top>
         <ToolBar
