--- a/src/main/resources/org/example/javafx_objectDB/nueva-copia-view.fxml
+++ b/src/main/resources/org/example/javafx_objectDB/nueva-copia-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.control.Spinner?>
 <VBox xmlns="http://javafx.com/javafx/24.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.example.javafx_hibernate.ui.controller.NuevaCopiaController"
+      fx:controller="org.example.javafx_objectDB.ui.controller.NuevaCopiaController"
       spacing="10">
     <padding>
         <Insets top="10" right="10" bottom="10" left="10"/>
